Windows x86 build failure: JNU_ThrowOutOfMemoryError undefined

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 9
    • Affects Version/s: 9
    • Component/s: core-libs
    • b02
    • Verified

        A recent change, JDK-8029007 introduced JNU_ThrowOutOfMemoryError into MessageUtils. The Windows x86 build subsequently fails as follows:

        Warning (shows the root cause):
        c:/jprt/T/P1/113753.chhegar/s/jdk/src/share/native/sun/misc/MessageUtils.c(58) : warning C4013: 'JNU_ThrowOutOfMemoryError' undefined; assuming extern returning int

        Actual linkage failure:
        ## Starting jdk
        Compiling 9620 files for BUILD_JDK
        Note: Some input files use or override a deprecated API.
        Note: Recompile with -Xlint:deprecation for details.
        Note: Some input files use unchecked or unsafe operations.
        Note: Recompile with -Xlint:unchecked for details.
        Compiling 235 files for BUILD_SECURITY
        Compiling 2 files for BUILD_ACCESSBRIDGE_32
        Compiling 2 files for BUILD_ACCESSBRIDGE_LEGACY
        Note: Some input files use unchecked or unsafe operations.
        Note: Recompile with -Xlint:unchecked for details.
        Note: Some input files use unchecked or unsafe operations.
        Note: Recompile with -Xlint:unchecked for details.
        Note: Some input files use or override a deprecated API.
        Note: Recompile with -Xlint:deprecation for details.
        MessageUtils.c
        c:/cygwin/home/chhegar/sbdata/repos/jdk9/dev/dev/jdk/src/share/native/sun/misc/MessageUtils.c(58) : warning C4013: 'JNU_ThrowOutOfMemoryError' undefined; assuming extern returning int
        VM.c
        Version.c
           Creating library c:/cygwin/home/chhegar/sbdata/repos/jdk9/dev/dev/build/windows-x86-normal-server-release/jdk/objs/libjava/java.lib and object c:/cygwin/home/chhegar/sbdata/repos/jdk9/dev/dev/build/windows-x86-normal-server-release/jdk/objs/libjava/java.exp
        MessageUtils.obj : error LNK2019: unresolved external symbol _JNU_ThrowOutOfMemoryError referenced in function _printToFile
        c:/cygwin/home/chhegar/sbdata/repos/jdk9/dev/dev/build/windows-x86-normal-server-release/jdk/bin/java.dll : fatal error LNK1120: 1 unresolved externals
        lib/CoreLibraries.gmk:185: recipe for target `/cygdrive/c/cygwin/home/chhegar/sbdata/repos/jdk9/dev/dev/build/windows-x86-normal-server-release/jdk/bin/java.dll' failed
        make[2]: *** [/cygdrive/c/cygwin/home/chhegar/sbdata/repos/jdk9/dev/dev/build/windows-x86-normal-server-release/jdk/bin/java.dll] Error 96
        BuildJdk.gmk:70: recipe for target `libs-only' failed
        make[1]: *** [libs-only] Error 2
        /cygdrive/c/cygwin/home/chhegar/sbdata/repos/jdk9/dev/dev//make/Main.gmk:115: recipe for target `jdk-only' failed
        make: *** [jdk-only] Error 2

              Assignee:
              Chris Hegarty
              Reporter:
              Chris Hegarty
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: