8031708: Windows x86 build failure: JNU_ThrowOutOfMemoryError undefined

Reviewed-by: alanb